# backend/soat/src/main/java/br/com/postech/soat/order/adapters/in/http/controller/mapper/OrderItemMapper.java
@@ -2,10 +2,15 @@ package br.com.postech.soat.order.adapters.in.http.controller.mapper;
 
 import br.com.postech.soat.openapi.model.OrderItemDto;
 import br.com.postech.soat.order.core.domain.model.OrderItem;
+import br.com.postech.soat.order.core.domain.model.OrderItemId;
+import br.com.postech.soat.order.infrastructure.jpa.entity.OrderItemEntity;
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.UUID;
+import org.mapstruct.AfterMapping;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
+import org.mapstruct.MappingTarget;
 import org.mapstruct.factory.Mappers;
 
 @Mapper(
@@ -16,10 +21,21 @@ public interface OrderItemMapper {
 
     OrderItemMapper INSTANCE = Mappers.getMapper(OrderItemMapper.class);
 
+    @Mapping(target = "id", ignore = true)
     @Mapping(target = "price", expression = "java(new BigDecimal(orderItemDto.getPrice()))")
     @Mapping(target = "discount", source = "discount")
     @Mapping(target = "category", expression = "java(orderItemDto.getCategory() != null ? orderItemDto.getCategory().getValue() : null)")
+    @Mapping(target = "productId", source = "productId")
     OrderItem mapFrom(OrderItemDto orderItemDto);
+
+    @Mapping(target = "id", source = "orderItem.id.value")
+    @Mapping(target = "productId", source = "orderItem.productId")
+    @Mapping(target = "discountAmount", source = "orderItem.discount.value")
+    @Mapping(target = "productName", source = "orderItem.name")
+    @Mapping(target = "productQuantity", source = "orderItem.quantity")
+    @Mapping(target = "unitPrice", source = "orderItem.price")
+    OrderItemEntity mapFrom(OrderItem orderItem, UUID orderId);
+
 
     default List<OrderItem> mapFrom(List<OrderItemDto> orderItemDtos) {
         if (orderItemDtos == null) {
