# backend/soat/src/main/java/br/com/postech/soat/order/adapters/in/http/controller/mapper/OrderItemRequestMapper.java
@@ -12,7 +12,6 @@ import org.mapstruct.ReportingPolicy;
 import org.mapstruct.factory.Mappers;
 
 @Mapper(
-    componentModel = "spring",
     unmappedTargetPolicy = ReportingPolicy.IGNORE,
     imports = {BigDecimal.class}
 )
@@ -20,6 +19,7 @@ public interface OrderItemRequestMapper {
 
     OrderItemRequestMapper INSTANCE = Mappers.getMapper(OrderItemRequestMapper.class);
 
+    @Mapping(target = "productId", source = "productId")
     @Mapping(target = "price", expression = "java(new BigDecimal(orderItemDto.getPrice()))")
     @Mapping(target = "discount", expression = "java(mapDiscount(orderItemDto.getDiscount()))")
     @Mapping(target = "name", source = "name")
