# backend/soat/src/main/resources/static/api-docs.yaml
@@ -214,6 +214,56 @@ paths:
       servers:
         - url: 'http://localhost:8080'
           description: Localhost
+  /payments:
+    post:
+      tags:
+        - Payment
+      summary: Iniciar processo de pagamento
+      description: Solicita o processamento de um pagamento associado a um pedido previamente criado. O endpoint aceita a requisição e retorna imediatamente com o identificador da transação de pagamento.
+      operationId: post-payments
+      requestBody:
+        $ref: '#/components/requestBodies/PaymentRequest'
+      responses:
+        '202':
+          description: 'Representa a resposta do sistema após o recebimento de uma solicitação de pagamento. Contém o identificador único da transação, que poderá ser utilizado para consultar o status do pagamento posteriormente.'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  paymentId:
+                    $ref: '#/components/schemas/UUID'
+                required:
+                  - paymentId
+              examples:
+                Example 1:
+                  value:
+                    paymentId: 241fae7b-0210-4d29-a928-90653c9a9a89
+      servers:
+        - url: 'http://localhost:8080'
+          description: Localhost
+  '/payments/{paymentId}':
+    get:
+      tags:
+        - Payment
+      summary: Consultar pagamento
+      description: |-
+        Este endpoint permite consultar as informações de uma transação de pagamento previamente processada.
+        É útil para verificar o status final de um pagamento iniciado de forma assíncrona ou para exibir detalhes ao cliente ou sistemas internos.
+      operationId: get-payments-paymentId
+      parameters:
+        - name: paymentId
+          in: path
+          description: Identificador único da transação de pagamento gerada durante o processo de checkout.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/PaymentResponse'
+      servers:
+        - url: 'http://localhost:8080'
+          description: Localhost
 tags:
   - name: Customer
     description: Operações relacionadas a clientes
@@ -340,7 +390,8 @@ components:
               value:
                 CustomerId: 241fae7b-0210-4d29-a928-90653c9a9a89
                 items:
-                  - name: string
+                  - productId: 241fae7b-0210-4d29-a928-90653c9a9a89
+                    name: string
                     quantity: 2
                     price: '1946.32'
                     category: SNACK
@@ -352,6 +403,25 @@ components:
                     value: '12.4'
                 notes:
                   - Remover a salada
+    PaymentRequest:
+      description: Representa os dados necessários para iniciar o processo de pagamento de um pedido. Esse objeto é enviado no corpo da requisição.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              customerId:
+                $ref: '#/components/schemas/UUID'
+              orderId:
+                $ref: '#/components/schemas/UUID'
+            required:
+              - customerId
+              - orderId
+          examples:
+            Example 1:
+              value:
+                customerId: 241fae7b-0210-4d29-a928-90653c9a9a89
+                orderId: 241fae7b-0210-4d29-a928-90653c9a9a89
   responses:
     OrderCreatedResponse:
       description: Example response
@@ -396,6 +466,51 @@ components:
               - subtotal
               - total
               - status
+          examples:
+            Example 1:
+              value:
+                OrderId: 241fae7b-0210-4d29-a928-90653c9a9a89
+                items:
+                  - id: 241fae7b-0210-4d29-a928-90653c9a9a89
+                    name: string
+                    quantity: 2
+                    price: '1946.32'
+                    category: SNACK
+                    discount:
+                      id: 241fae7b-0210-4d29-a928-90653c9a9a89
+                      value: '12.4'
+                discounts:
+                  - discountId: 241fae7b-0210-4d29-a928-90653c9a9a89
+                    type: PERCENTAGE
+                    amount: '1946.32'
+                    reason: string
+                discountAmountTotal: '1946.32'
+                subtotal: '1946.32'
+                total: '1946.32'
+                status: RECEIVED
+    PaymentResponse:
+      description: Representa os dados retornados após o processamento de um pagamento durante o checkout de um pedido.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              orderId:
+                $ref: '#/components/schemas/UUID'
+              paymentId:
+                $ref: '#/components/schemas/UUID'
+              amount:
+                $ref: '#/components/schemas/Money'
+              paymentStatus:
+                $ref: '#/components/schemas/PaymentStatus'
+              processedAt:
+                $ref: '#/components/schemas/DateTime'
+            required:
+              - orderId
+              - paymentId
+              - amount
+              - paymentStatus
+              - processedAt
   schemas:
     Customer:
       type: object
@@ -444,15 +559,6 @@ components:
         message: Requisição inválida
         error:
           - Campo obrigatório 'email' não informado
-    Category:
-      type: string
-      enum:
-        - SNACK
-        - DRINK
-        - DESSERT
-        - SIDE_DISH
-      title: Category
-      description: Categoria do produto dentro do pedido.
     UUID:
       type: string
       title: UUID
@@ -462,11 +568,22 @@ components:
       minLength: 36
       maxLength: 36
       example: 241fae7b-0210-4d29-a928-90653c9a9a89
+    Category:
+      type: string
+      enum:
+        - SNACK
+        - DRINK
+        - DESSERT
+        - SIDE_DISH
+      title: Category
+      description: Categoria do produto dentro do pedido.
     OrderItem:
       type: object
       title: OrderItem
       description: 'Item individual de um pedido, contendo informações do produto e quantidade solicitada.'
       properties:
+        productId:
+          $ref: '#/components/schemas/UUID'
         name:
           type: string
         quantity:
@@ -483,6 +600,7 @@ components:
         discount:
           $ref: '#/components/schemas/Discount'
       required:
+        - productId
         - name
         - quantity
         - price
@@ -503,7 +621,7 @@ components:
           $ref: '#/components/schemas/UUID'
         value:
           type: string
-          pattern: '^\d{1,3}(\.\d{3})*(,\d{2})?$'
+          pattern: '^''?(\d{1,3}(\.\d{3})*|\d+)([.,]\d{1,2})?''?$'
           readOnly: true
           example: '12.4'
       required:
@@ -527,3 +645,18 @@ components:
         - DELIVERED
       title: OrderStatus
       readOnly: true
+    PaymentStatus:
+      type: string
+      enum:
+        - APPROVED
+        - DECLINED
+      title: PaymentStatus
+      description: Representa o resultado do processamento de uma tentativa de pagamento durante o fluxo de checkout
+      readOnly: true
+    DateTime:
+      type: string
+      title: DateTime
+      format: date-time
+      pattern: '^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}(\.\d{1,9})?(Z|[+-]\d{2}:\d{2})$'
+      readOnly: true
+      example: '2025-05-20T00:00:00Z'
